# aihomeserver

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.dev  HYPERV_CURRENT_STATE_AND_NEXT_READS.md  NEXT_STEPS_2026-04-22.md  PROGRESS_2026-04-22.md  README.md  UI_FEATURES_ROADMAP_2026-04-22.md  docker-compose.dev.yml  docker-compose.worker.yml  docker-compose.yml  episodic.db  plans between grok and chat gpt
.claude/: settings.local.json
desktop/: hyperv.js  main.js  package-lock.json  package.json  preload.js
desktop/scripts/: verify-packaged-resources.js
docs/: ARCHITECTURE_EXPLAINED.md  WORKLOG_2026-05-02.md  WORKLOG_CODEX_ASSIST_2026-05-02.md
scripts/: docker-entrypoint.sh  eval.ps1  eval.sh  hyperv-worker.ps1  metrics.ps1  test-hyperv-worker.ps1
searxng/: limiter.toml  settings.yml
src/: config.rs  grounding.rs  main.rs  metrics.rs  orchestrator.rs  state.rs  worker.rs
src/api/: evals.rs  learn.html  learn.rs  learn_docs.rs  mod.rs  server.rs  ui.rs
src/coder/: adapter.rs  browser_contract.rs  intent.rs  manifest.rs  mod.rs  repair_planner.rs  scaffold.rs  verifier.rs
src/coder/adapters/: go.rs  javascript.rs  python.rs  rust.rs
src/llm/: mod.rs  ollama.rs
src/memory/: conversation.rs  episodic.rs  knowledge.rs  mod.rs  semantic.rs  sources.rs
src/nodes/: classifier.rs  critic.rs  executor.rs  finalization.rs  intake.rs  mod.rs  planner.rs  repair.rs  tool_execution.rs
src/tools/: browser.rs  filesystem.rs  git.rs  http_fetch.rs  mod.rs  parallel_search.rs  save_knowledge.rs  shell.rs  web_search.rs
workspace/: hello.txt
