[package]
name = "aihomeserver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aihomeserver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (Ollama + http_fetch tool)
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }

# Streaming support
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (episodic memory)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
zip = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
